refactor: improve logging and code consistency across utility modules
- Updated logging statements to use a consistent logger instance.
- Removed unnecessary comments and improved code formatting for better readability.
- Enhanced proxy configuration handling in `proxy.ts` with clearer signatures and error handling.
- Streamlined selection actions in `selection-actions.ts` for better async handling and error reporting.
- Refactored selection bridge functions to ensure consistent logging and error handling.
- Cleaned up storage utility functions for better readability and consistency.
- Improved translation helper functions for clarity and consistency in URL building.
- Updated update utility functions for better readability and consistency.
- Enhanced main page component to handle selection toolbar actions more effectively.
- Updated TypeScript definitions for turndown-plugin-gfm for consistency.

--- a/package.json
+++ b/package.json
@@ -14,45 +14,49 @@
     "test:rust": "cd src-tauri && cargo test",
     "lint": "pnpm run lint:frontend && pnpm run lint:rust",
     "lint:frontend": "eslint src",
-    "lint:fix": "eslint src --fix",
     "lint:rust": "cd src-tauri && cargo fmt --check && cargo clippy -- -D warnings",
+    "lint:fix": "pnpm run lint:frontend:fix && pnpm run lint:rust:fix",
+    "lint:frontend:fix": "eslint src --fix",
     "lint:rust:fix": "cd src-tauri && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
+    "format": "pnpm eslint src --fix && cd src-tauri && cargo fmt",
     "tauri": "tauri",
     "version:sync": "node .github/scripts/sync-version.js",
     "release:validate": "node .github/scripts/validate-version.js"
   },
   "license": "MIT",
   "dependencies": {
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-global-shortcut": "^2.3.1",
-    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-shell": "^2.3.3",
     "@tauri-apps/plugin-store": "^2.4.1",
     "@types/turndown": "^5.0.6",
-    "lucide-svelte": "^0.548.0",
+    "lucide-svelte": "^0.554.0",
     "turndown": "^7.2.2",
     "turndown-plugin-gfm": "^1.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tauri-apps/cli": "^2",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
+    "@eslint/js": "^9.39.1",
+    "@sveltejs/adapter-static": "^3.0.10",
+    "@sveltejs/kit": "^2.48.5",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@tauri-apps/cli": "^2.9.4",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "autoprefixer": "10",
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-svelte": "^3.13.0",
-    "jsdom": "^25.0.0",
-    "postcss": "8",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
+    "jsdom": "^25.0.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "svelte": "^5.43.8",
+    "svelte-check": "^4.3.4",
     "svelte-eslint-parser": "^1.4.0",
-    "tailwindcss": "^3.4.18",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "vitest": "^1.6.0"
-  },
-  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2",
+    "vitest": "^4.0.10"
+  }
 }
