--- a/package.json
+++ b/package.json
@@ -39,23 +39,17 @@
     "@eslint/js": "^9.39.1",
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.48.5",
-    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tauri-apps/cli": "^2.9.4",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
-    "autoprefixer": "10",
     "eslint": "^9.39.1",
     "eslint-plugin-svelte": "^3.13.0",
-    "jsdom": "^25.0.1",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "eslint-config-prettier": "^9.1.2",
-    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
+    "jsdom": "^27.2.0",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
     "svelte-eslint-parser": "^1.4.0",
-    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2",
     "vitest": "^4.0.10"
   }
