--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ai-ask",
+  "type": "module",
   "version": "0.0.1-alpha.13",
   "description": "AI Ask - 一个简洁高效的AI问答助手",
-  "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -23,7 +24,6 @@
     "version:sync": "node .github/scripts/sync-version.js",
     "release:validate": "node .github/scripts/validate-version.js"
   },
-  "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-global-shortcut": "^2.3.1",
@@ -36,6 +36,7 @@
     "turndown-plugin-gfm": "^1.0.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^6.2.0",
     "@eslint/js": "^9.39.1",
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.48.5",
